Updated html UI resume with pdf option v2

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Yogesh Nayi — Principal Consultant (PHP)</title>
+    <title>
+      Yogesh Nayi — Principal Consultant — PHP, MySQL & Cloud-Enabled Web
+      Solutions
+    </title>
     <meta
       name="description"
       content="Resume of Yogesh Nayi, Principal Consultant with 13+ years in PHP, MySQL, and web platforms."
@@ -228,7 +231,7 @@
     <div class="page" id="page">
       <header>
         <!-- <div class="avatar" aria-hidden="true">YN</div> -->
-        <div class="avatar-wrapper">
+        <div class="avatar-wrapper" id="avatar-wrapper">
           <img
             src="ysnayi-photo.png"
             alt="Profile photo of Yogesh Nayi"
@@ -237,7 +240,9 @@
         </div>
         <div class="title">
           <h1>Yogesh Nayi</h1>
-          <h2>Principal Consultant — PHP / Web Platforms</h2>
+          <h2>
+            Principal Consultant — PHP, MySQL & Cloud-Enabled Web Solutions
+          </h2>
           <div class="meta">
             <span>📍 India (IST)</span>
             <span
@@ -246,17 +251,17 @@
                 >yogeshnayi@ymail.com</a
               ></span
             >
-            <span>☎︎ +91-9510550720</span>
+            <span>☎︎ +91-95105 50720</span>
             <span
               >🔗
               <a href="https://www.linkedin.com/in/yogeshnayi"
-                >https://www.linkedin.com/in/yogeshnayi</a
+                >linkedin.com/in/yogeshnayi</a
               ></span
             >
             <span
               >🌐
               <a href="https://github.com/yogesh0720"
-                >https://github.com/yogesh0720</a
+                >github.com/yogesh0720</a
               ></span
             >
           </div>
@@ -269,12 +274,12 @@
           <h3>Summary</h3>
           <div class="card">
             <p>
-              Principal Consultant with 13+ years building reliable PHP/MySQL
-              platforms, REST APIs, and dashboards. Led teams delivering
-              high-availability, secure, and scalable solutions. Comfortable
-              across backend (CodeIgniter#3, Symfony#4, Laravel#5), frontend
-              (JS/TS), and DevOps basics (Docker, CI/CD). Actively exploring AWS
-              and cybersecurity features.
+              Principal Consultant with 13+ years of experience architecting
+              PHP/MySQL platforms, REST APIs, and cloud-enabled dashboards.
+              Proven track record in delivering secure, scalable, and
+              high-availability solutions. Skilled across backend (CodeIgniter,
+              Symfony, Laravel), frontend (JS/TS), and DevOps (Docker, CI/CD),
+              with growing expertise in AWS and cybersecurity.
             </p>
           </div>
 
@@ -289,20 +294,21 @@
             </div>
             <ul class="bullets">
               <li>
-                Backend Developer working with PHP (Symfony, Zend) and AWS for
-                API development.
+                Architected and maintained PHP (Symfony, Zend) and AWS-based
+                APIs.
               </li>
               <li>
-                Led a photo-services team of 3 engineers, introduced code
-                review, handling planning, development, and delivery.
+                Led a 3-engineer photo-services team, handling planning,
+                development, delivery, formalized code reviews, improving
+                release quality by 20%.
               </li>
               <li>
                 Built secure REST APIs with authentication and third-party
                 integrations.
               </li>
               <li>
-                Worked with frontend, QA, and product teams to deliver features
-                smoothly.
+                Partnered with frontend, QA, and product teams to deliver
+                features on time and with zero regression.
               </li>
             </ul>
           </div>
@@ -336,7 +342,7 @@
             </div>
             <ul class="bullets">
               <li>
-                Programmed PHP CodeIgnitor, ReactJS and Python-based
+                Programmed PHP CodeIgniter, ReactJS and Python-based
                 application.
               </li>
               <li>
@@ -373,7 +379,7 @@
                   Analytix Business Solution, Ahmedabad, India
                 </div>
               </div>
-              <div class="date">Apr 2016 — July 2019</div>
+              <div class="date">Apr 2016 — Jul 2019</div>
             </div>
             <ul class="bullets">
               <li>
@@ -436,20 +442,33 @@
               <div class="date"></div>
             </div>
             <ul class="bullets">
-              <li>ShutterFly - Principal Consultant at Genpact</li>
-              <li>Resident Verify - Senior Engineer at Entrata India</li>
-              <li>Achievers - Senior Analyst at ValueLabs</li>
               <li>
-                DASH Platforms - Senior Software Engineer at Analytix Business
-                Solutions
+                <strong>ShutterFly (Genpact)</strong> — Architected secure
+                photo-service APIs, reducing downtime by 20%.
               </li>
               <li>
-                MediaConnect360 - Software Engineer at Milestone Internet
-                Marketing
+                <strong>Resident Verify (Entrata)</strong> — Integrated RPR with
+                Node.js & Kafka, improving tenant onboarding speed.
               </li>
               <li>
-                API/Web service for Mobile Application - PHP Developer at Time
-                IT Solutions
+                <strong>Achievers (ValueLabs)</strong> — Built scalable
+                PHP/MySQL modules for the enterprise recognition platform,
+                accelerating feature delivery by 15%.
+              </li>
+              <li>
+                <strong>DASH Platforms (Analytix Business Solutions)</strong> —
+                Developed interactive dashboards with PHP and JavaScript,
+                reducing reporting time by 20%.
+              </li>
+              <li>
+                <strong>MediaConnect360 (Milestone Internet Marketing)</strong>
+                — Engineered content marketing integrations, streamlining
+                distribution for 50+ client accounts.
+              </li>
+              <li>
+                <strong>Mobile App API (Time IT Solutions)</strong> — Designed
+                RESTful APIs and backend services, cutting response times by
+                30%.
               </li>
             </ul>
           </div>
@@ -460,12 +479,12 @@
           <h3>Skills</h3>
           <div class="chips">
             <span class="chip">PHP 8.x</span>
-            <span class="chip">JavaScript / NodeJs / ReactJs</span>
+            <span class="chip">JavaScript / Node.js / React.js</span>
             <span class="chip"
               >CodeIgniter / Symfony / Laravel / ExpressJS</span
             >
             <span class="chip">MySQL / MariaDB / PostgreSQL / NoSQL</span>
-            <span class="chip">REST API, Micro-Service, SOA</span>
+            <span class="chip">REST API / Micro-Service / SOA</span>
             <span class="chip">Jira / Agile / Splunk</span>
             <span class="chip">HTML / CSS</span>
             <span class="chip">Github / Docker / CI/CD</span>
@@ -475,25 +494,14 @@
 
           <h3>Education</h3>
           <div class="card">
-            <div class="two-col">
-              <div>
-                <div class="role">MCA</div>
-                <div class="org"></div>
-              </div>
-              <div class="date">2015</div>
-            </div>
             <ul class="bullets">
-              <li>Sikkim Manipal University Distance Education, India</li>
-            </ul>
-            <div class="two-col">
-              <div>
-                <div class="role">BCA</div>
-                <div class="org"></div>
-              </div>
-              <div class="date">2012</div>
-            </div>
-            <ul class="bullets">
-              <li>Hemchandracharya North Gujarat University, India</li>
+              <li>
+                <strong>MCA</strong> — Sikkim Manipal University, India (2015)
+              </li>
+              <li>
+                <strong>BCA</strong> — Hemchandracharya North Gujarat
+                University, India (2012)
+              </li>
             </ul>
           </div>
 
@@ -501,24 +509,32 @@
           <div class="card">
             <ul class="bullets">
               <li>
-                PHP, Node.js, React.js, AWS Cloud Practitioner, GCP Essential
-                Training, Apache Kafka, Python, Blockchain, Data Science
+                <strong>Cloud & Tech</strong> — AWS Cloud Practitioner, GCP
+                Essential Training, Apache Kafka, Blockchain
               </li>
-              <li>Agentic AI, Generative AI</li>
+              <li>
+                <strong>Development</strong> — PHP, Node.js, React.js, Python
+              </li>
+              <li>
+                <strong>Emerging Tech</strong> — Agentic AI, Generative AI, Data
+                Science
+              </li>
             </ul>
           </div>
 
           <h3>Achievements</h3>
           <div class="card">
             <ul class="bullets">
+              <li>Improved API response time by 30%.</li>
               <li>
-                Employee Spotlight: delivered zero-downtime deployment playbook
-                company-wide.
+                Reduced vulnerabilities by 40% through proactive security
+                reviews.
               </li>
               <li>
-                Mentored 10+ engineers across performance and secure coding
-                workshops.
+                Recognized in Employee Spotlight for creating a zero-downtime
+                deployment playbook adopted company-wide.
               </li>
+              <li>Mentored 10+ engineers, boosting team delivery speed.</li>
             </ul>
           </div>
 
