--- a/index.html
+++ b/index.html
@@ -3,14 +3,50 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <title>
-      Yogesh Nayi — Principal Consultant — PHP, MySQL & Cloud-Enabled Web
+      Yogesh Nayi — Principal Consultant | PHP, Node.js, Python, AWS Cloud
       Solutions
     </title>
+
     <meta
       name="description"
-      content="Resume of Yogesh Nayi, Principal Consultant with 13+ years in PHP, MySQL, and web platforms."
+      content="Principal Consultant specializing in PHP, Node.js, Python, and AWS — delivering scalable, cloud-enabled web solutions with 13+ years of experience."
     />
+    <link rel="canonical" href="https://yogesh0720.github.io/" />
+    <meta name="robots" content="index,follow" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Yogesh Nayi — Principal Consultant | PHP, Node.js, Python, AWS Cloud Solutions"
+    />
+    <meta
+      property="og:description"
+      content="Principal Consultant specializing in PHP, Node.js, Python, and AWS — delivering scalable, cloud-enabled web solutions with 13+ years of experience."
+    />
+    <meta property="og:url" content="https://yogesh0720.github.io/" />
+    <meta
+      property="og:image"
+      content="https://yogesh0720.github.io/ysnayi-photo.png"
+    />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Yogesh Nayi — Principal Consultant | PHP, Node.js, Python, AWS Cloud Solutions"
+    />
+    <meta
+      name="twitter:description"
+      content="13+ years delivering secure, scalable, cloud-enabled platforms across PHP, Node.js, Python & AWS."
+    />
+    <meta
+      name="twitter:image"
+      content="https://yogesh0720.github.io/ysnayi-photo.png"
+    />
+
     <style>
       /* ---------- Base & Print ---------- */
       :root {
@@ -100,6 +136,21 @@
         display: flex;
         align-items: center;
         gap: 6px;
+      }
+
+      .header-cta {
+        margin-top: 12px;
+      }
+      .btn {
+        display: inline-block;
+        border: 1px solid #e5e7eb;
+        background: #fff;
+        border-radius: 10px;
+        padding: 8px 12px;
+        text-decoration: none;
+      }
+      .btn:active {
+        transform: translateY(1px);
       }
 
       main {
@@ -206,7 +257,7 @@
         header,
         main,
         footer {
-          padding: 0 0 0 0;
+          padding: 0;
         }
         header {
           padding-bottom: 8px;
@@ -221,7 +272,8 @@
         .avatar {
           display: none;
         }
-        .actions {
+        .actions,
+        .header-cta {
           display: none;
         }
       }
@@ -230,7 +282,6 @@
   <body>
     <div class="page" id="page">
       <header>
-        <!-- <div class="avatar" aria-hidden="true">YN</div> -->
         <div class="avatar-wrapper" id="avatar-wrapper">
           <img
             src="ysnayi-photo.png"
@@ -241,10 +292,12 @@
         <div class="title">
           <h1>Yogesh Nayi</h1>
           <h2>
-            Principal Consultant — PHP, MySQL & Cloud-Enabled Web Solutions
+            Principal Consultant — PHP, Node.js, Python &amp; AWS Cloud-Enabled
+            Web Solutions
           </h2>
+
           <div class="meta">
-            <span>📍 India (IST)</span>
+            <span>📍 Ahmedabad, India (IST)</span>
             <span
               >✉︎
               <a href="mailto:yogeshnayi@ymail.com"
@@ -254,13 +307,13 @@
             <span>☎︎ +91-95105 50720</span>
             <span
               >🔗
-              <a href="https://www.linkedin.com/in/yogeshnayi"
+              <a href="https://www.linkedin.com/in/yogeshnayi" rel="noopener"
                 >linkedin.com/in/yogeshnayi</a
               ></span
             >
             <span
               >🌐
-              <a href="https://github.com/yogesh0720"
+              <a href="https://github.com/yogesh0720" rel="noopener"
                 >github.com/yogesh0720</a
               ></span
             >
@@ -274,12 +327,12 @@
           <h3>Summary</h3>
           <div class="card">
             <p>
-              Principal Consultant with 13+ years of experience architecting
-              PHP/MySQL platforms, REST APIs, and cloud-enabled dashboards.
-              Proven track record in delivering secure, scalable, and
-              high-availability solutions. Skilled across backend (CodeIgniter,
-              Symfony, Laravel), frontend (JS/TS), and DevOps (Docker, CI/CD),
-              with growing expertise in AWS and cybersecurity.
+              Principal Consultant with 13+ years architecting PHP/MySQL
+              platforms, REST APIs, and cloud-enabled dashboards. Proven track
+              record delivering secure, scalable, high-availability solutions.
+              Polyglot across backend (PHP: CodeIgniter, Symfony, Laravel;
+              Node.js; Python), frontend (JS/TS), and DevOps (Docker, CI/CD),
+              with growing depth in AWS and application security.
             </p>
           </div>
 
@@ -298,9 +351,8 @@
                 APIs.
               </li>
               <li>
-                Led a 3-engineer photo-services team, handling planning,
-                development, delivery, formalized code reviews, improving
-                release quality by 20%.
+                Led a 3-engineer photo-services team; formalized code reviews,
+                improving release quality by 20%.
               </li>
               <li>
                 Built secure REST APIs with authentication and third-party
@@ -308,10 +360,11 @@
               </li>
               <li>
                 Partnered with frontend, QA, and product teams to deliver
-                features on time and with zero regression.
+                features on time with zero regression.
               </li>
             </ul>
           </div>
+
           <div class="item">
             <div class="top">
               <div>
@@ -332,6 +385,7 @@
               </li>
             </ul>
           </div>
+
           <div class="item">
             <div class="top">
               <div>
@@ -342,19 +396,19 @@
             </div>
             <ul class="bullets">
               <li>
-                Programmed PHP CodeIgniter, ReactJS and Python-based
-                application.
+                Programmed PHP CodeIgniter, ReactJS, and Python-based
+                applications.
               </li>
               <li>
                 Contributed to Architecture team and REST API Swagger
                 development.
               </li>
               <li>
-                Managed a team of 5, engaged in client communication, and
-                followed Agile methodologies.
+                Managed a team of 5; client communication; Agile delivery.
               </li>
             </ul>
           </div>
+
           <div class="item">
             <div class="top">
               <div>
@@ -364,13 +418,14 @@
               <div class="date">Aug 2019 — Sep 2019</div>
             </div>
             <ul class="bullets">
-              <li>Crafted Laravel-based application using PHP and MySQL.</li>
+              <li>Crafted Laravel-based applications using PHP and MySQL.</li>
               <li>
-                Collaborated with project teams and focused on dedicated Laravel
+                Collaborated with project teams; focused on dedicated Laravel
                 development.
               </li>
             </ul>
           </div>
+
           <div class="item">
             <div class="top">
               <div>
@@ -383,18 +438,15 @@
             </div>
             <ul class="bullets">
               <li>
-                Introduced CI/CD support and automation programming in PHP,
-                Python, and Django.
+                Introduced CI/CD and automation using PHP, Python, and Django.
               </li>
               <li>
                 Managed a team, conducted code reviews, and provided training.
               </li>
-              <li>
-                Worked within Agile development teams and contributed to custom
-                development.
-              </li>
+              <li>Delivered custom development within Agile teams.</li>
             </ul>
           </div>
+
           <div class="item">
             <div class="top">
               <div>
@@ -411,11 +463,12 @@
                 websites.
               </li>
               <li>
-                Managed junior coders and interns, ensured website
-                functionality, and assisted design with coding.
+                Mentored junior coders; ensured site functionality; assisted
+                design with coding.
               </li>
             </ul>
           </div>
+
           <div class="item">
             <div class="top">
               <div>
@@ -426,24 +479,18 @@
             </div>
             <ul class="bullets">
               <li>
-                Developed APIs for mobile development, gained proficiency in
-                PHP, iOS, and Android.
+                Developed APIs for mobile apps; gained proficiency in PHP, iOS,
+                and Android.
               </li>
-              <li>
-                Managed Web API development and functional specifications.
-              </li>
+              <li>Owned Web API development and functional specifications.</li>
             </ul>
           </div>
 
           <h3>Selected Projects</h3>
           <div class="item">
-            <div class="top">
-              <div class="role"></div>
-              <div class="date"></div>
-            </div>
             <ul class="bullets">
               <li>
-                <strong>ShutterFly (Genpact)</strong> — Architected secure
+                <strong>Shutterfly (Genpact)</strong> — Architected secure
                 photo-service APIs, reducing downtime by 20%.
               </li>
               <li>
@@ -452,23 +499,21 @@
               </li>
               <li>
                 <strong>Achievers (ValueLabs)</strong> — Built scalable
-                PHP/MySQL modules for the enterprise recognition platform,
-                accelerating feature delivery by 15%.
+                PHP/MySQL modules for enterprise recognition, accelerating
+                delivery by 15%.
               </li>
               <li>
                 <strong>DASH Platforms (Analytix Business Solutions)</strong> —
-                Developed interactive dashboards with PHP and JavaScript,
-                reducing reporting time by 20%.
+                Interactive dashboards in PHP/JS, reducing reporting time by
+                20%.
               </li>
               <li>
-                <strong>MediaConnect360 (Milestone Internet Marketing)</strong>
-                — Engineered content marketing integrations, streamlining
-                distribution for 50+ client accounts.
+                <strong>MediaConnect360 (Milestone)</strong> — Engineered
+                content integrations, streamlining distribution for 50+ clients.
               </li>
               <li>
-                <strong>Mobile App API (Time IT Solutions)</strong> — Designed
-                RESTful APIs and backend services, cutting response times by
-                30%.
+                <strong>Mobile App API (Time IT Solutions)</strong> — RESTful
+                APIs and backend services, cutting response times by 30%.
               </li>
             </ul>
           </div>
@@ -480,15 +525,16 @@
           <div class="chips">
             <span class="chip">PHP 8.x</span>
             <span class="chip">JavaScript / Node.js / React.js</span>
+            <span class="chip">Python / Django / FastAPI</span>
             <span class="chip"
-              >CodeIgniter / Symfony / Laravel / ExpressJS</span
+              >CodeIgniter / Symfony / Laravel / ExpressJS / NestJS</span
             >
             <span class="chip">MySQL / MariaDB / PostgreSQL / NoSQL</span>
-            <span class="chip">REST API / Micro-Service / SOA</span>
+            <span class="chip">REST APIs / Microservices / SOA</span>
             <span class="chip">Jira / Agile / Splunk</span>
             <span class="chip">HTML / CSS</span>
-            <span class="chip">Github / Docker / CI/CD</span>
-            <span class="chip">AWS (S3, EC2, ECS)</span>
+            <span class="chip">GitHub / Docker / CI/CD</span>
+            <span class="chip">AWS (S3, EC2, ECS, Lambda, RDS, DynamoDB)</span>
             <span class="chip">Security Basics (OWASP)</span>
           </div>
 
@@ -527,14 +573,32 @@
             <ul class="bullets">
               <li>Improved API response time by 30%.</li>
               <li>
-                Reduced vulnerabilities by 40% through proactive security
-                reviews.
+                Reduced vulnerabilities by 40% via proactive security reviews.
               </li>
               <li>
-                Recognized in Employee Spotlight for creating a zero-downtime
-                deployment playbook adopted company-wide.
+                Recognized in Employee Spotlight for a zero-downtime deployment
+                playbook adopted company-wide.
               </li>
               <li>Mentored 10+ engineers, boosting team delivery speed.</li>
+            </ul>
+          </div>
+
+          <!-- ✅ New Community & Volunteering section -->
+          <h3>Community & Volunteering</h3>
+          <div class="card">
+            <ul class="bullets">
+              <li>
+                <strong>AWS Ahmedabad User Group</strong> — Active volunteer and
+                community contributor. Participated in AWS Community Day events
+                and cloud architecture workshops focusing on cost optimization,
+                serverless design, and DevOps automation.
+              </li>
+              <li>
+                <strong>Laravel Ahmedabad Community</strong> — Regular meetup
+                attendee exploring Laravel best practices, performance tuning,
+                and full-stack integrations with modern tooling (Node.js,
+                Python, AWS).
+              </li>
             </ul>
           </div>
 
@@ -550,43 +614,69 @@
       <footer>
         <div>Last updated: <span id="updated"></span></div>
         <div class="actions">
-          <button onclick="window.print()" title="Save/Print as PDF">
+          <button
+            onclick="window.print()"
+            title="Save/Print as PDF"
+            aria-label="Save or print this résumé as PDF"
+          >
             🖨️ Save as PDF
           </button>
         </div>
       </footer>
     </div>
 
-    <!-- Optional: JSON-LD for better parsing on job portals that support it -->
+    <!-- Structured data (JSON-LD) -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "Person",
         "name": "Yogesh Nayi",
         "jobTitle": "Principal Consultant",
-        "email": "yogeshnayi@ymail.com",
-        "url": "https://github.com/yogesh0720",
-        "sameAs": ["https://www.linkedin.com/in/yogeshnayi/"],
+        "email": "mailto:yogeshnayi@ymail.com",
+        "telephone": "+91-9510550720",
+        "url": "https://yogesh0720.github.io/",
+        "image": "https://yogesh0720.github.io/ysnayi-photo.png",
+        "sameAs": [
+          "https://www.linkedin.com/in/yogeshnayi/",
+          "https://github.com/yogesh0720"
+        ],
+        "worksFor": { "@type": "Organization", "name": "Genpact" },
         "knowsAbout": [
           "PHP",
-          "CodeIgniter",
-          "Symfony",
           "Laravel",
-          "ExpressJS",
-          "MySQL",
-          "APIs",
+          "Symfony",
+          "CodeIgniter",
           "JavaScript",
           "Node.js",
+          "Express.js",
           "React.js",
+          "Python",
+          "Django",
+          "FastAPI",
+          "MySQL",
+          "PostgreSQL",
+          "NoSQL",
+          "REST APIs",
+          "Microservices",
+          "SOA",
           "Docker",
-          "AWS"
-        ],
-        "worksFor": { "@type": "Organization", "name": "Genpact" }
+          "CI/CD",
+          "AWS",
+          "S3",
+          "EC2",
+          "ECS",
+          "Lambda",
+          "RDS",
+          "DynamoDB",
+          "Kafka",
+          "Security",
+          "OWASP"
+        ]
       }
     </script>
 
     <script>
-      // Update timestamp automatically
+      // Update timestamp automatically (DD-MM-YYYY)
       (function () {
         const el = document.getElementById("updated");
         const d = new Date();
