updated-resume-dec23-25

--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>
-      Yogesh Nayi — Principal Consultant | PHP, Node.js, Python, AWS Cloud
-      Solutions
+      Yogesh Nayi — Principal Consultant | PHP, Node.js, AWS Cloud Solutions
     </title>
 
     <meta
       name="description"
-      content="Principal Consultant specializing in PHP, Node.js, Python, and AWS — delivering scalable, cloud-enabled web solutions with 13+ years of experience."
+      content="Principal Consultant specializing in PHP, Node.js, and AWS — delivering scalable, cloud-enabled web solutions with 13+ years of experience."
     />
     <link rel="canonical" href="https://yogesh0720.github.io/" />
     <meta name="robots" content="index,follow" />
@@ -20,11 +19,11 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
-      content="Yogesh Nayi — Principal Consultant | PHP, Node.js, Python, AWS Cloud Solutions"
+      content="Yogesh Nayi — Principal Consultant | PHP, Node.js, AWS Cloud Solutions"
     />
     <meta
       property="og:description"
-      content="Principal Consultant specializing in PHP, Node.js, Python, and AWS — delivering scalable, cloud-enabled web solutions with 13+ years of experience."
+      content="Principal Consultant specializing in PHP, Node.js, and AWS — delivering scalable, cloud-enabled web solutions with 13+ years of experience."
     />
     <meta property="og:url" content="https://yogesh0720.github.io/" />
     <meta
@@ -36,11 +35,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Yogesh Nayi — Principal Consultant | PHP, Node.js, Python, AWS Cloud Solutions"
+      content="Yogesh Nayi — Principal Consultant | PHP, Node.js, AWS Cloud Solutions"
     />
     <meta
       name="twitter:description"
-      content="13+ years delivering secure, scalable, cloud-enabled platforms across PHP, Node.js, Python & AWS."
+      content="13+ years delivering secure, scalable, cloud-enabled platforms across PHP, Node.js & AWS."
     />
     <meta
       name="twitter:image"
@@ -292,8 +291,8 @@
         <div class="title">
           <h1>Yogesh Nayi</h1>
           <h2>
-            Principal Consultant — PHP, Node.js, Python &amp; AWS Cloud-Enabled
-            Web Solutions
+            Principal Consultant — PHP, Node.js &amp; AWS Cloud-Enabled Web
+            Solutions
           </h2>
 
           <div class="meta">
@@ -331,8 +330,8 @@
               platforms, REST APIs, and cloud-enabled dashboards. Proven track
               record delivering secure, scalable, high-availability solutions.
               Polyglot across backend (PHP: CodeIgniter, Symfony, Laravel;
-              Node.js; Python), frontend (JS/TS), and DevOps (Docker, CI/CD),
-              with growing depth in AWS and application security.
+              Node.js: ExpressJS, NestJS), frontend (JS/TS), and DevOps (Docker,
+              CI/CD), with growing depth in AWS and application security.
             </p>
           </div>
 
@@ -343,7 +342,7 @@
                 <div class="role">Principal Consultant (PHP)</div>
                 <div class="org">Genpact • Full-time</div>
               </div>
-              <div class="date">Oct 2023 — Present</div>
+              <div class="date">Oct 2023 — Dec 2025</div>
             </div>
             <ul class="bullets">
               <li>
@@ -524,16 +523,15 @@
           <h3>Skills</h3>
           <div class="chips">
             <span class="chip">PHP 8.x</span>
-            <span class="chip">JavaScript / Node.js / React.js</span>
-            <span class="chip">Python / Django / FastAPI</span>
+            <span class="chip">JavaScript, Node.js, React.js</span>
             <span class="chip"
-              >CodeIgniter / Symfony / Laravel / ExpressJS / NestJS</span
+              >CodeIgniter, Symfony, Laravel, ExpressJS, NestJS</span
             >
-            <span class="chip">MySQL / MariaDB / PostgreSQL / NoSQL</span>
-            <span class="chip">REST APIs / Microservices / SOA</span>
-            <span class="chip">Jira / Agile / Splunk</span>
-            <span class="chip">HTML / CSS</span>
-            <span class="chip">GitHub / Docker / CI/CD</span>
+            <span class="chip">MySQL, MariaDB, PostgreSQL, NoSQL</span>
+            <span class="chip">REST APIs, Microservices, SOA</span>
+            <span class="chip">Jira, Agile, Splunk</span>
+            <span class="chip">HTML, CSS</span>
+            <span class="chip">GitHub, Docker, CI/CD</span>
             <span class="chip">AWS (S3, EC2, ECS, Lambda, RDS, DynamoDB)</span>
             <span class="chip">Security Basics (OWASP)</span>
           </div>
@@ -558,9 +556,7 @@
                 <strong>Cloud & Tech</strong> — AWS Cloud Practitioner, GCP
                 Essential Training, Apache Kafka, Blockchain
               </li>
-              <li>
-                <strong>Development</strong> — PHP, Node.js, React.js, Python
-              </li>
+              <li><strong>Development</strong> — PHP, Node.js, React.js</li>
               <li>
                 <strong>Emerging Tech</strong> — Agentic AI, Generative AI, Data
                 Science
@@ -596,8 +592,7 @@
               <li>
                 <strong>Laravel Ahmedabad Community</strong> — Regular meetup
                 attendee exploring Laravel best practices, performance tuning,
-                and full-stack integrations with modern tooling (Node.js,
-                Python, AWS).
+                and full-stack integrations with modern tools.
               </li>
             </ul>
           </div>
@@ -650,9 +645,6 @@
           "Node.js",
           "Express.js",
           "React.js",
-          "Python",
-          "Django",
-          "FastAPI",
           "MySQL",
           "PostgreSQL",
           "NoSQL",
